Bug 349419: add nsIDocShellLoadInfo type for fixup, to silence an assertion that occurs any time a URI is fixed up, r=biesi, sr=bzbarsky